<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="100"
              android:background="@color/black">


   <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="50"
           android:background="@color/black">

       <EditText
           android:layout_height="50dp"
           android:layout_width="500dp">



       </EditText>

   </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:background="@color/black">


        <Button
                android:id="@+id/whereimatbutton"
                android:layout_height="wrap_content"
                android:layout_width="120dp"
                android:text="@string/whereimat_button"
                android:layout_marginBottom="10dp"
                android:background="@color/red"
                android:layout_gravity="center_horizontal"/>


        <Button
                android:id="@+id/prsbutton"
                android:layout_height="wrap_content"
                android:layout_width="120dp"
                android:text="@string/prs_button"
                android:layout_marginBottom="10dp"
                android:background="@color/red"
                android:layout_gravity="center_horizontal"/>


        <Button
                android:id="@+id/goalsbutton"
                android:layout_height="wrap_content"
                android:layout_width="120dp"
                android:text="@string/goals_button"
                android:layout_marginBottom="10dp"
                android:background="@color/red"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>